chore: update Prettier configuration, add Tailwind CSS plugin, and modify package dependencies in the web app

--- a/packages/i18n/locales/ptBR/common.json
+++ b/packages/i18n/locales/ptBR/common.json
@@ -1,3 +1,10 @@
 {
-  "title": "oiKonomos"
+  "title": "oiKonomos",
+  "home": "Home",
+  "hero": {
+    "headline": "Menos conta,",
+    "headlineAccent": "mais controle.",
+    "description": "Um painel para seus gastos. Simples de ver, fácil de controlar.",
+    "cta": "Começar agora"
+  }
 }
